<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workout_log"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="showWorkoutLog"
            android:title="@string/title_workout_log" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="showDietActivity"
            android:title="@string/title_activity_diet" />
        <item
            android:id="@+id/nav_coaching"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="showCoachingActivity"
            android:title="@string/title_coaching_diet" />
    </group>
</menu>
